tests/ui/lint/snapshots/printf_verb_mismatch_raw_string_format.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Missing format arguments
   ╭─[test.lis:5:3]
 4 │ fn main() {
 5 │   fmt.Printf(r"%d\t%d", 1)
   ·   ────────────┬───────────
   ·               ╰── 2 verbs, 1 argument
 6 │ }
   ╰────
  help: `fmt.Printf` has 2 verbs but 1 argument, so `%d` prints as `%!d(MISSING)`. Add the missing argument, remove the verb, or write `%%` for a literal percent sign · code: [lint.printf_verb_mismatch]
