tests/ui/lint/snapshots/printf_verb_mismatch_star_precision_missing_precision.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Missing format arguments
   ╭─[test.lis:5:3]
 4 │ fn main() {
 5 │   fmt.Printf("[%.*f]\n")
   ·   ───────────┬──────────
   ·              ╰── 2 operands, 0 arguments
 6 │ }
   ╰────
  help: `fmt.Printf` has 2 operands but 0 arguments, so the `*` precision prints as `%!(BADPREC)`. Add the missing precision argument or write a fixed precision · code: [lint.printf_verb_mismatch]
